kubernetes/cinema.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema
  labels:
    app: cinema
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinema
  template:
    metadata:
      labels:
        app: cinema
    spec:
      containers:
      - name: cinema
        image: local:5000/cinema:local
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: cinema
spec:
  selector:
    app: cinema
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
