kubernetes/room.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room
  labels:
    app: room
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room
  template:
    metadata:
      labels:
        app: room
    spec:
      containers:
      - name: room
        image: local:5000/room:local
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: room
spec:
  selector:
    app: room
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
