kubernetes/session.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session
  labels:
    app: session
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session
  template:
    metadata:
      labels:
        app: session
    spec:
      containers:
      - name: session
        image: local:5000/session:local
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: session
spec:
  selector:
    app: session
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
